SQLite for users

--- a/gateway/.env
+++ b/gateway/.env
@@ -15,3 +15,6 @@ COOKIE_SECURE=false            # прод: true (потрібен HTTPS)
 COOKIE_SAMESITE=lax            # (lax/strict/none)
 ACCESS_COOKIE_NAME=access_token
 REFRESH_COOKIE_NAME=refresh_token
+
+# --- DB ---
+DB_URL = sqlite:///./data/app.db
