--- a/gateway/requirements.txt
+++ b/gateway/requirements.txt
@@ -18,3 +18,6 @@ loguru==0.7.2                     # зручне логування
 # ---- Dev / Tests ----
 pytest==8.3.2
 httpx==0.27.0                     # також використовується в тестах
+
+# ---- DB ----
+SQLAlchemy==2.0.34
