--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vueuse/core": "^13.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.545.0",
     "nuxt": "^4.1.2",
+    "ofetch": "^1.4.1",
+    "reka-ui": "^2.5.1",
     "shadcn-nuxt": "^2.3.1",
     "shadcn-vue": "^2.3.1",
     "tailwind-merge": "^3.3.1",
@@ -23,6 +26,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "3.4"
