--- a/gateway/.env
+++ b/gateway/.env
@@ -21,3 +21,8 @@ DB_URL = sqlite:///./data/app.db
 
 # --- AI ---
 GOOGLE_API_KEY=
+
+# --- ---
+QUEUE_MODE = dramatiq
+REDIS_URL = redis://localhost:6379/0
+UPLOAD_DIR = ./data/uploads
