First frame implementation

--- a/gateway/.env
+++ b/gateway/.env
@@ -22,6 +22,12 @@ DB_URL = sqlite:///./data/app.db
 # --- AI ---
 GOOGLE_API_KEY=
 
+# --- WhatsApp ---
+META_WHATSAPP_VERIFY_TOKEN=
+META_WHATSAPP_ACCESS_TOKEN=
+META_WHATSAPP_PHONE_NUMBER_ID=
+META_WHATSAPP_API_VERSION=
+
 # --- ---
 QUEUE_MODE = dramatiq
 REDIS_URL = redis://localhost:6379/0
