--- a/gateway/.env
+++ b/gateway/.env
@@ -23,6 +23,9 @@ DB_URL = sqlite:///./data/app.db
 GOOGLE_API_KEY=
 
 # --- ---
+LLM_SETTINGS_SECRET_KEY =
+
+# --- ---
 QUEUE_MODE = dramatiq
 REDIS_URL = redis://localhost:6379/0
 UPLOAD_DIR = ./data/uploads
