Telegram test run

--- a/gateway/.env
+++ b/gateway/.env
@@ -1,7 +1,7 @@
 ENV=dev
 APP_NAME=Gateway
 APP_VERSION=0.1.0
-CORS_ORIGINS=http://localhost:3000, http://127.0.0.1:3000
+CORS_ORIGINS=http://127.0.0.1:8000
 REQUEST_ID_HEADER=X-Request-ID
 
 # --- JWT / Cookies ---
@@ -24,6 +24,9 @@ GOOGLE_API_KEY =
 
 # --- ---
 LLM_SETTINGS_SECRET_KEY =
+
+# --- ---
+TELEGRAM_BOT_TOKEN =
 
 # --- ---
 QUEUE_MODE = dramatiq
